# gita

./: Cargo.toml  LICENSE  README.md  diff.text  gita.prompt.txt
src/: main.rs
