[package]
name = "gita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.2.3"
clap = "4.4.7"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
winsplit = "0.1"